# substack-to-epub

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/substack_to_epub/: __init__.py  cli.py  epub.py  substack.py
tests/: test_cli.py  test_epub.py  test_substack.py
